--- a/style.css
+++ b/style.css
@@ -1,25 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Space+Mono&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Roboto+Mono&family=Space+Mono&display=swap');
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: rgb(90, 110, 95);
-}
-
-.content {
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-    width: 75%;
-    height: 100vh;
-    margin: auto;
-    padding: 10px 15px;
     background-color: white;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
-.content > * {
+.blog {
+    width: 75%;
+    margin: auto;
+    height: 100vh;
+}
+
+.flex {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.article, .contents, h1 {
+    padding: 10px 15px;
+}
+
+.article > *, .contents > * {
     margin: 10px 0;
+}
+
+.article > h2 {
+    margin: 30px 0 0 0;
+}
+
+li {
+    margin: 0 0 0 50px;
 }
 
 .code {
@@ -27,5 +42,11 @@ body {
     border-radius: 5px;
     padding: 5px;
     color: white;
-    font-family: 'Space Mono', monospace;
+    font-family: 'Roboto Mono', monospace;
+    text-align: left;
+}
+
+pre, code {
+    font-family: 'Roboto Mono', monospace;
+    font-size: small;
 }
