--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@
 }
 
 body {
-    background-color: white;
+    background: linear-gradient(#e66465, #9198e5);
     font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 .blog {
+    background-color: white;
     width: 75%;
     margin: auto;
-    height: 100vh;
+    height: 100%;
 }
 
 .flex {
@@ -25,7 +26,7 @@ body {
     padding: 10px 15px;
 }
 
-.article > *, .contents > * {
+.article > * {
     margin: 10px 0;
 }
 
@@ -34,7 +35,7 @@ body {
 }
 
 li {
-    margin: 0 0 0 50px;
+    margin: 0 0 0 20px;
 }
 
 .code {
@@ -49,4 +50,12 @@ li {
 pre, code {
     font-family: 'Roboto Mono', monospace;
     font-size: small;
+}
+
+.contents {
+    width: 100%;
+}
+
+.contents > * {
+    position: fixed;
 }
